Wrap Up (Created intro animation and Fixed Some Resizing Issues

--- a/stake.css
+++ b/stake.css
@@ -86,6 +86,77 @@ i {
 }
 
 
+/* INTRO */
+
+.intro {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #1B2C39;
+    z-index: 9999999999;
+}
+
+.intro img {
+    height: 40px;
+}
+
+.intro div {
+    height: 40px;
+    overflow: hidden;
+}
+
+.small-logo {
+    animation: smallLogo 1s linear 0s infinite;
+}
+
+.big-logo {
+    transform: translateY(-100%);
+    animation: bigLogo 1s linear 0s infinite;
+}
+
+@keyframes smallLogo {
+    0% {
+        transform: translateY(100%);
+        opacity: 1;
+    }
+    25% {
+        transform: translateY(0%);
+        opacity: 1;
+    }
+    50% {
+        transform: translateY(0%);
+        opacity: 0;
+    }
+    75% {
+        transform: translateY(0%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0%);
+        opacity: 0;
+    }
+}
+
+@keyframes bigLogo {
+    0% {
+        opacity: 0;
+    }
+    25% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 1;
+    }
+    75% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
 
 
 /*DETAILED SIDE MENU*/
@@ -554,6 +625,7 @@ i {
 /*FIXED HEADER*/
 
 .odds-page {
+    display: none;
     flex-grow: 1;
     min-width: calc(100% - 590px);
     background-color: #1B2D38;
